fix: removing java 21 syntax